--- a/styles.css
+++ b/styles.css
@@ -8,9 +8,10 @@ img {
     
 }
 
-main{
+main {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 
 #rustys-logo{
